--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,14 @@
-<<<<<<< HEAD
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://example.github.io
+title: Omar AbdulRazak
+email: ilbuuromar@gmail.com
+url: https://omar-abdul.github.io
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
 skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+meta_author: Mohammed Omar
+
+short1: "I am a web developer based in Hargeisa that mainly works with  Javascript, PHP, NodeJS HTML & CSS. I love to build projects that give back to the society."
+short2: "When not developing you can find me enjoying the company of my family or a good book"
 
 # Google webmaster tools
 google_verify:
@@ -22,7 +24,7 @@ contact: static
 
 # If you use disqus you need disqus shortname
 # https://help.disqus.com/customer/portal/articles/466208
-disqus_shortname: myshortname
+# disqus_shortname: myshortname
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -57,11 +59,8 @@ address:
   - line: Beverly Hills, CA 90210
 
 # Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+# credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
 
 # Build settings
 markdown: kramdown
 permalink: pretty
-=======
-theme: jekyll-theme-time-machine
->>>>>>> 0b316e375eb5d5761dc2730a16b29f617282095e
