--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ email: ilbuuromar@gmail.com
 url: https://omar-abdul.github.io
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist"
+skills: "Web Developer - Programmer"
 meta_author: Mohammed Omar
 
-short1: "I am a web developer based in Hargeisa that mainly works with  Javascript, PHP, NodeJS HTML & CSS. I love to build projects that give back to the society."
+short1: "I am a web developer/programmer based in Hargeisa that mainly works with  Javascript, PHP, NodeJS HTML & CSS. I love to build projects that give back to the society."
 short2: "When not developing you can find me enjoying the company of my family or a good book"
 
 # Google webmaster tools
@@ -42,16 +42,10 @@ footer:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
-  - title: twitter
-    url: http://twitter.com/jekyllrb
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url:http://facebook.com/omar-ilbuur
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/omar-abdul
 
 # Postal address (add as many lines as necessary)
 # address:
